# AttitudeControlSystem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  reactionalsystem.cpp  reactionalsystem.h  reactionalwheel.cpp  reactionalwheel.h  regulators.cpp  regulators.h  satellite.cpp  satellite.h  solver.h
